@@ -5,18 +5,13 @@ all_from 'lib/Catalyst/Model/DBIC/Schema.pm';
 
 requires 'DBIx::Class'           => '0.08100';
 requires 'Catalyst::Runtime'     => '5.80002';
-requires 'Moose';
 requires 'Moose::Autobox';
 requires 'MooseX::ClassAttribute';
 requires 'MooseX::Types';
-requires 'MooseX::Object::Pluggable' => '0.0009';
+requires 'MooseX::Object::Pluggable' => '0.0011';
 requires 'namespace::clean';
 requires 'Carp::Clan';
-
-if($] < 5.009_005) {
-    requires 'Class::C3::XS' => '0.08';
-    requires 'Class::C3' => '0.20';
-}
+requires 'List::MoreUtils';
 
 test_requires 'Test::More';
 
